# dragons-manager

./: .gitignore  CHANGELOG-en.md  CHANGELOG.md  README-en.md  README.md  index.html  package-lock.json  package.json  rename-portable.js
src/: App.css  App.tsx  main.tsx  tipos.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: BarraLateral.tsx  CardJogo.tsx  CartaoInstancia.tsx  ModalLancamentoJogo.tsx  SecaoBuscarUsuario.tsx  SecaoContas.tsx  SecaoInstancias.tsx  SecaoJogos.tsx  SecaoSobre.tsx
src/contexts/: ContasContext.tsx
src/hooks/: useAtualizacao.ts  useContas.ts  useInstancias.ts
src/i18n/: config.ts
src/i18n/locales/en/: common.json
src/i18n/locales/pt/: common.json
