[package]
name = "dragons-manager"
version = "0.1.0"
description = "MultiRoblox Manager - Múltiplas instâncias do Roblox"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dragons_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2.6.0"
rookie = "0.5.6"
rusqlite = { version = "0.31", features = ["bundled"] }
aes-gcm = "0.10"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "synchapi",
  "handleapi",
  "processthreadsapi",
  "winbase",
  "winerror",
  "errhandlingapi",
  "securitybaseapi",
  "winnt",
  "dpapi",
  "wincrypt",
] }
